--- a/.github/workflows/every-one-hour.yml
+++ b/.github/workflows/every-one-hour.yml
@@ -7,6 +7,9 @@ jobs:
   setUpAndRun:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
       - uses: actions/setup-node@v2
         with:
           node-version: 12
