--- a/.github/workflows/every-one-hour.yml
+++ b/.github/workflows/every-one-hour.yml
@@ -32,4 +32,4 @@ jobs:
       - name: Run Node.js script
         run: npm start
         env:
-          API_KEY: ${{ secrets.BOT_TOKEN }}
+          BOT_TOKEN: ${{ secrets.BOT_TOKEN }}
