--- a/.github/workflows/every-one-hour.yml
+++ b/.github/workflows/every-one-hour.yml
@@ -6,6 +6,7 @@ on:
 jobs:
   setUpAndRun:
     runs-on: ubuntu-latest
+    timeout-minutes: 5
     steps:
       - uses: actions/checkout@v2
         with:
